api folder & vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "source": "/api/:path*",
       "destination": "https://api.almang.shop/:path*"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.py": {
+      "runtime": "@vercel/python@3.12"
+    }
+  }
 }
